[package]
name = "fxfactorial-blog"
version = "0.1.0"
authors = ["Edgar Aroutiounian <edgar.factorial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.6", default-features = false }